incluido projeto web mvc padrão

--- a/Source/Opala.Web/Views/_ViewImports.cshtml
+++ b/Source/Opala.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Opala.Web
-@namespace Opala.Web.Pages
+﻿@using Opala.Web
+@using Opala.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
